namespace/media/qbittorrent/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nqbittorrent.oglesby.io`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nqbittorrent.oglesby.io`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: traefik
      services:
        - name: qbittorrent
          port: 8080
